# reactive-reasoning-guardrails

./: README.md  pyproject.toml  rrg_audit_log.jsonl
examples/: simple_agent.py
src/reactive_reasoning_guardrails.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rrg/: __init__.py
src/rrg/core/: __init__.py  orchestrator.py
src/rrg/corrector/: __init__.py
src/rrg/enforcement/: __init__.py  boundary.py  enforcement_layer.py  grounding.py  structured_inference.py
src/rrg/estimator/: __init__.py  calibration.py  hybrid_estimator.py
src/rrg/monitor/: __init__.py
src/rrg/patterns/: __init__.py  boundary_violation.py  early_pruning.py  knowledge_prioritization.py  path_lockin.py
tests/: conftest.py  test_core.py  test_corrector.py  test_estimator.py  test_monitor.py  test_orchestrator.py  test_pattern_detectors.py  test_patterns.py
tests/test_enforcement/: test_boundary.py  test_grounding.py  test_structured_inference.py
tests/test_estimator/: test_calibration.py  test_hybrid_estimator.py
