[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reactive-reasoning-guardrails"
version = "0.1.0"
description = "Reactive guardrails for LLM reasoning agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Corbin", email = "corbin@example.com"}
]
keywords = ["llm", "guardrails", "reasoning", "uncertainty"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "structlog>=24.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/example/reactive-reasoning-guardrails"
Repository = "https://github.com/example/reactive-reasoning-guardrails"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python-version = "3.11"
warn_return_any = true
warn_unused_ignores = true
